--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ryanmurakami/ec2fieldday#readme",
   "dependencies": {
+    "aws-sdk": "^2.771.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
