--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "grd": "^1.4.0",
+    "lodash": "^4.17.20",
     "react-router-dom": "^5.2.0",
     "react-svg": "^11.0.43"
   }
