--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install-all": "npm install && cd client && npm install",
     "start-all": "cd client && npm run build && cd .. && npm run start",
-    "start": "node mock.js && nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.771.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "ncp": "^2.0.0",
     "nodemon": "^2.0.4"
   },
