--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "aws-sdk": "^2.782.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "ncp": "^2.0.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4"
   },
   "nodemonConfig": {
