--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "install-all": "npm install && cd client && npm install",
-    "start-all": "cd client && npm run build && cd .. && npm run start",
-    "start": "nodemon app.js",
+    "start-all": "cd client && npm run build && cd .. && npm run start-debug",
+    "start-debug": "nodemon app.js",
+    "start": "npm run install-all && npm run start-all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
