--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "winston": "^3.3.3"
   },
   "nodemonConfig": {
     "ignore": [
