--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This demo app is for the EC2 Field Day course. The app is called _Field Day_ and simulates field day events for a group of characters representing AWS Services.",
   "main": "index.js",
   "scripts": {
+    "build": "cd client && npm run build",
     "preinstall": "cd client && npm install",
     "start-all": "cd client && npm run build && cd .. && npm run start-debug",
     "start-debug": "nodemon app.js",
