--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "homepage": "https://github.com/ryanmurakami/ec2fieldday#readme",
   "dependencies": {
     "aws-sdk": "^2.782.0",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "flash": "^1.1.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "winston": "^3.3.3"
   },
   "nodemonConfig": {
