updating styling and event simulation

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 EVENTS_DATABASE=fieldDayDemo_event
 COMPETITORS_DATABASE=fielddaydemo_competitors
+DEFAULT_AWS_REGION=us-west-2
 REDISSTORE_URL=
 REDISSTORE_SECRET=
