--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run build && npm run start:server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:client-debug": "webpack serve --mode development",
-    "start:server": "node app.js"
+    "start:server": "AWS_SDK_LOAD_CONFIG=true node app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/ryanmurakami/ec2fieldday#readme",
   "dependencies": {
+    "@aws-sdk/client-config-service": "3.9.0",
+    "@aws-sdk/signature-v4": "3.6.1",
     "aws-sdk": "2.868.0",
     "connect-redis": "5.1.0",
     "cors": "2.8.5",
@@ -54,7 +56,6 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "react-svg": "12.1.0",
     "sass": "1.32.8",
     "sass-loader": "11.0.1",
     "standard": "16.0.3",
