--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-EVENTS_DATABASE=fieldDayDemo_event
-COMPETITORS_DATABASE=fielddaydemo_competitors
+DYNAMO_TABLE=fieldDay
 DEFAULT_AWS_REGION=us-west-2
-REDISSTORE_URL=
-REDISSTORE_SECRET=
+REDISSTORE_SECRET=fieldDay
