updated changes for reference

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 EVENTS_DATABASE=fieldDayDemo_event
 COMPETITORS_DATABASE=fielddaydemo_competitors
+MAIN_DATABASE=fieldday_demo
 REDISSTORE_URL=
 REDISSTORE_SECRET=
