--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production --config ./client/webpack.config.js",
     "start-debug": "npm run start:client-debug && nodemon app.js",
-    "start": "npm run build && npm run start:server",
+    "start": "npm run build && npm run start:forever",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:client-debug": "webpack serve --mode development --config ./client/webpack.config.js",
     "start:server": "node app.js",
