--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "ec2fieldday",
+  "name": "fieldday",
   "version": "1.0.0",
   "description": "This demo app is for the EC2 Field Day course. The app is called _Field Day_ and simulates field day events for a group of characters representing AWS Services.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production --config ./client/webpack.config.js",
     "start-debug": "npm run start:client-debug && nodemon app.js",
-    "start": "npm run build && npm run start:forever",
+    "start": "npm run build && npm run start:server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:client-debug": "webpack serve --mode development --config ./client/webpack.config.js",
-    "start:server": "node app.js",
-    "start:forever": "npx forever start -o out.log -e err.log app.js",
-    "stop": "npx forever stop 0"
+    "start:server": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanmurakami/ec2fieldday.git"
+    "url": "git+https://github.com/ryanmurakami/fieldday.git"
   },
   "author": "Nabil S",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ryanmurakami/ec2fieldday/issues"
+    "url": "https://github.com/ryanmurakami/fieldday/issues"
   },
-  "homepage": "https://github.com/ryanmurakami/ec2fieldday#readme",
+  "homepage": "https://github.com/ryanmurakami/fieldday#readme",
   "dependencies": {
     "@aws-sdk/client-config-service": "3.9.0",
     "@aws-sdk/signature-v4": "3.6.1",
